--- a/kdtree.ipynb
+++ b/kdtree.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 1,
    "id": "25ad53f7",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 2,
    "id": "d000bed0",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 3,
    "id": "6d28fa9c",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "id": "465b50ac",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 5,
    "id": "5ef7c419",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "id": "e5c107f6",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 7,
    "id": "ce9b4dfd",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "id": "8dd5114e",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 9,
    "id": "60827372",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "id": "6d4db128",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "        [281, 411]]))"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 11,
    "id": "d0e5d9d6",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 12,
    "id": "13065655",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 13,
    "id": "0940903f",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 14,
    "id": "674f1448",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 15,
    "id": "f017672d",
    "metadata": {},
    "outputs": [],
@@ -328,53 +328,50 @@
     "    if p1[0]==p2[0]:\n",
     "        print('Collinear points')\n",
     "        return\n",
-    "    slope = (p2[1] - p1[1])/(p2[0] - p1[0])\n",
-    "    \n",
-    "    #RIGHT DIAGONAL\n",
-    "    if slope > 0:\n",
-    "        if isLeaf(node):\n",
-    "            if checkRight(node, p1, p2):\n",
-    "                NoOfPoints += 1\n",
-    "        else:\n",
-    "            NoOfPoints += int(checkRight(node,p1,p2)==True)\n",
-    "            if type(node.left) == list: \n",
-    "                Nl = ToNode(node.left)\n",
-    "            else: \n",
-    "                Nl = node.left\n",
-    "            if type(node.right) == list: \n",
-    "                Nr = ToNode(node.right)\n",
-    "            else: \n",
-    "                Nr = node.right\n",
-    "            NoOfPoints += CountQueryPoints(Nl, p1, p2)\n",
-    "            NoOfPoints += CountQueryPoints(Nr, p1, p2)\n",
-    "            \n",
-    "    #LEFT DIAGONAL\n",
-    "    elif slope < 0:\n",
-    "        if isLeaf(node):\n",
-    "            if checkLeft(node, p1, p2):\n",
-    "                NoOfPoints += 1\n",
-    "        else:\n",
-    "            NoOfPoints += int(checkLeft(node,p1,p2)==True)\n",
-    "            if type(node.left) == list: \n",
-    "                Nl = ToNode(node.left)\n",
-    "            else: \n",
-    "                Nl = node.left\n",
-    "            if type(node.right) == list: \n",
-    "                Nr = ToNode(node.right)\n",
-    "            else: \n",
-    "                Nr = node.right\n",
-    "            NoOfPoints += CountQueryPoints(Nl, p1, p2)\n",
-    "            NoOfPoints += CountQueryPoints(Nr, p1, p2)\n",
-    "            \n",
     "    else:\n",
-    "        print('Collinear points')\n",
-    "        return\n",
+    "        slope = (p2[1] - p1[1])/(p2[0] - p1[0])\n",
+    "        \n",
+    "        if slope == 0:\n",
+    "            print('Collinear points')\n",
+    "            return\n",
+    "        \n",
+    "        else:\n",
+    "            #RIGHT DIAGONAL\n",
+    "            if isLeaf(node) and slope > 0:\n",
+    "                if checkRight(node, p1, p2):\n",
+    "                    NoOfPoints += 1\n",
+    "                    \n",
+    "            #LEFT DIAGONAL\n",
+    "            elif isLeaf(node) and slope < 0:\n",
+    "                if checkLeft(node, p1, p2):\n",
+    "                    NoOfPoints += 1\n",
+    "                    \n",
+    "            else:\n",
+    "                #RIGHT DIAGONAL\n",
+    "                if slope > 0:\n",
+    "                    NoOfPoints += int(checkRight(node,p1,p2)==True)\n",
+    "                    \n",
+    "                #LEFT DIAGONAL    \n",
+    "                if slope < 0:\n",
+    "                    NoOfPoints += int(checkLeft(node,p1,p2)==True)\n",
+    "                    \n",
+    "                if type(node.left) == list: \n",
+    "                    Nl = ToNode(node.left)\n",
+    "                else: \n",
+    "                    Nl = node.left\n",
+    "                if type(node.right) == list: \n",
+    "                    Nr = ToNode(node.right)\n",
+    "                else: \n",
+    "                    Nr = node.right\n",
+    "                NoOfPoints += CountQueryPoints(Nl, p1, p2)\n",
+    "                NoOfPoints += CountQueryPoints(Nr, p1, p2)\n",
+    "            \n",
     "    return NoOfPoints"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 16,
    "id": "fd2bf176",
    "metadata": {},
    "outputs": [],
@@ -384,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 17,
    "id": "fda55398",
    "metadata": {},
    "outputs": [],
@@ -394,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 18,
    "id": "28f95b02",
    "metadata": {},
    "outputs": [
@@ -418,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 19,
    "id": "aaf1e5c6",
    "metadata": {},
    "outputs": [
@@ -437,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 20,
    "id": "f6f3a56a",
    "metadata": {},
    "outputs": [
@@ -456,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 21,
    "id": "9fd3ff9e",
    "metadata": {},
    "outputs": [
@@ -476,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 22,
    "id": "a166d51e",
    "metadata": {},
    "outputs": [
@@ -493,14 +490,6 @@
     "#Case: Collinear\n",
     "print(CountQueryPoints(root,[-1,-1],[-1,15]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95d80e70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
