--- a/kdtree.ipynb
+++ b/kdtree.ipynb
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "id": "d000bed0",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
-    "    def __init__(self, val, dim = -1):\n",
+    "    def __init__(self, val, axis=0):\n",
     "        self.right = self.left = None\n",
     "        self.val = val\n",
-    "        self.dim = dim\n",
+    "        self.axis = axis\n",
     "\n",
     "class KDTree:\n",
     "    def __init__(self, axis, points):\n",
@@ -74,24 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 103,
    "id": "6d28fa9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buildKdTree(points, dim = 0, debug=False):\n",
-    "    nextDim = (dim + 1) % 2\n",
+    "def buildKdTree(points, hyperplaneAxis = 0, debug=False):\n",
+    "#     nextDim = (axis + 1) % 2\n",
+    "    dim = len(points[0])\n",
+    "    nxtHyperplaneAxis = (hyperplaneAxis + 1) % dim\n",
     "    \n",
     "    if len(points) == 1:\n",
-    "        return Node(points[0], nextDim)\n",
-    "\n",
-    "    # Get points sorted based on the axis\n",
-    "    if dim % 2 == 0:\n",
-    "        # Sorting points on x-axis\n",
-    "        sortedPoints = points[np.lexsort((points[:,1],points[:,0]))]\n",
-    "    else:\n",
-    "        # Sorting points on y-axis\n",
-    "        sortedPoints = points[np.lexsort((points[:,0],points[:,1]))]\n",
+    "        return Node(points[0], nxtHyperplaneAxis)\n",
+    "    \n",
+    "    sortedPoints = sorted(points, key=lambda x: x[0])\n",
     "    \n",
     "    medianIndex = len(points) // 2\n",
     "    median = sortedPoints[medianIndex]\n",
@@ -103,17 +99,18 @@
     "        print(\"median: \", median)\n",
     "        print(\"leftPoints: \", leftPoints)\n",
     "        print(\"rightPoints: \", rightPoints)\n",
+    "        print(\"hyperplane axis: \", hyperplaneAxis)\n",
     "    \n",
-    "    root = Node(median, dim)\n",
-    "    root.left = buildKdTree(leftPoints, nextDim) if len(leftPoints > 0) else []\n",
-    "    root.right = buildKdTree(rightPoints, nextDim) if len(rightPoints > 0) else []\n",
+    "    root = Node(median, hyperplaneAxis)\n",
+    "    root.left = buildKdTree(leftPoints, nxtHyperplaneAxis) if len(leftPoints) > 0 else []\n",
+    "    root.right = buildKdTree(rightPoints, nxtHyperplaneAxis) if len(rightPoints) > 0 else []\n",
     "    \n",
     "    return root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 104,
    "id": "465b50ac",
    "metadata": {},
    "outputs": [],
@@ -132,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "id": "5ef7c419",
    "metadata": {},
    "outputs": [],
@@ -145,32 +142,54 @@
     "            if node:\n",
     "                stack.append(node.left)\n",
     "                stack.append(node.right)\n",
-    "                print(\"root: \",node.val, node.dim if node else \"None\", \"left: \", node.left.val if node.left else \"None\", \"right: \", node.right.val if node.right else \"None\")    "
+    "                print(\"root: \",node.val if node else \"None\", \"left: \", node.left.val if node.left else \"None\", \"right: \", node.right.val if node.right else \"None\", \"axis: \", \"None\" if node.axis == \"None\" else node.axis)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 117,
    "id": "e5c107f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = np.array([(86, 338), (164, 360), (75, 58), (5,358),(400, 346), (281, 411), (136, 39),(324, 54),(296,332)])"
+    "points = np.array([(86, 338), (164, 360), (75, 58), (5,358), (400, 346), (281, 411), (136, 39), (324, 54),(296,332)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ce9b4dfd",
+   "execution_count": 118,
+   "id": "c1c128cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = buildKdTree(points, 0)"
+    "# points = np.array([(86, 338, 13), (164, 360, 34), (75, 58, 190), (5,358, 120),(400, 346, 290), (281, 411, 342), (136, 39, 456),(324, 54, 100),(296,332, 230)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
+   "id": "ce9b4dfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted based on:  2 [array([  5, 358]), array([75, 58]), array([ 86, 338]), array([136,  39]), array([164, 360]), array([281, 411]), array([296, 332]), array([324,  54]), array([400, 346])]\n",
+      "median:  [164 360]\n",
+      "leftPoints:  [array([  5, 358]), array([75, 58]), array([ 86, 338]), array([136,  39])]\n",
+      "rightPoints:  [array([281, 411]), array([296, 332]), array([324,  54]), array([400, 346])]\n",
+      "hyperplane axis:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = buildKdTree(points, 1, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "id": "8dd5114e",
    "metadata": {},
    "outputs": [
@@ -178,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res:  [array([75, 58]), array([136,  39]), array([  5, 358]), array([ 86, 338]), array([296, 332]), array([324,  54]), array([281, 411]), array([400, 346]), array([164, 360])]\n"
+      "res:  [array([  5, 358]), array([75, 58]), array([136,  39]), array([ 86, 338]), array([281, 411]), array([296, 332]), array([400, 346]), array([324,  54]), array([164, 360])]\n"
      ]
     }
    ],
@@ -188,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 121,
    "id": "60827372",
    "metadata": {},
    "outputs": [
@@ -196,15 +215,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root:  [164 360] 0 left:  [ 86 338] right:  [400 346]\n",
-      "root:  [ 86 338] 1 left:  [136  39] right:  [  5 358]\n",
-      "root:  [400 346] 1 left:  [324  54] right:  [281 411]\n",
-      "root:  [136  39] 0 left:  [75 58] right:  None\n",
-      "root:  [  5 358] 1 left:  None right:  None\n",
-      "root:  [324  54] 0 left:  [296 332] right:  None\n",
-      "root:  [281 411] 1 left:  None right:  None\n",
-      "root:  [75 58] 0 left:  None right:  None\n",
-      "root:  [296 332] 0 left:  None right:  None\n"
+      "root:  [164 360] left:  [ 86 338] right:  [324  54] axis:  1\n",
+      "root:  [ 86 338] left:  [75 58] right:  [136  39] axis:  0\n",
+      "root:  [324  54] left:  [296 332] right:  [400 346] axis:  0\n",
+      "root:  [75 58] left:  [  5 358] right:  None axis:  1\n",
+      "root:  [136  39] left:  None right:  None axis:  0\n",
+      "root:  [296 332] left:  [281 411] right:  None axis:  1\n",
+      "root:  [400 346] left:  None right:  None axis:  0\n",
+      "root:  [  5 358] left:  None right:  None axis:  1\n",
+      "root:  [281 411] left:  None right:  None axis:  1\n"
      ]
     }
    ],
@@ -214,55 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6d4db128",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[  5, 358],\n",
-       "        [ 75,  58],\n",
-       "        [ 86, 338],\n",
-       "        [136,  39],\n",
-       "        [164, 360],\n",
-       "        [281, 411],\n",
-       "        [296, 332],\n",
-       "        [324,  54],\n",
-       "        [400, 346]]),\n",
-       " array([[ 75,  58],\n",
-       "        [ 86, 338],\n",
-       "        [136,  39],\n",
-       "        [164, 360],\n",
-       "        [281, 411],\n",
-       "        [296, 332],\n",
-       "        [324,  54],\n",
-       "        [400, 346]]),\n",
-       " array([[136,  39],\n",
-       "        [324,  54],\n",
-       "        [ 75,  58],\n",
-       "        [296, 332],\n",
-       "        [ 86, 338],\n",
-       "        [400, 346],\n",
-       "        [  5, 358],\n",
-       "        [164, 360],\n",
-       "        [281, 411]]))"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dim1Sorted = np.lexsort((points[:,1],points[:,0])) \n",
-    "dim2Sorted = np.lexsort((points[:,0],points[:,1]))\n",
-    "points[dim1Sorted], points[dim1Sorted][1:], points[dim2Sorted]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 122,
    "id": "d0e5d9d6",
    "metadata": {},
    "outputs": [],
@@ -276,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 123,
    "id": "13065655",
    "metadata": {},
    "outputs": [],
@@ -290,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 124,
    "id": "0940903f",
    "metadata": {},
    "outputs": [],
@@ -305,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 125,
    "id": "674f1448",
    "metadata": {},
    "outputs": [],
@@ -317,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 126,
    "id": "f017672d",
    "metadata": {},
    "outputs": [],
@@ -371,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 127,
    "id": "fd2bf176",
    "metadata": {},
    "outputs": [],
@@ -381,17 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 128,
    "id": "fda55398",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = buildKdTree(points, 0)"
+    "root = buildKdTree(points, 2, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 129,
    "id": "28f95b02",
    "metadata": {},
    "outputs": [
@@ -399,13 +370,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root:  [5 5] 0 left:  [3 3] right:  [12 13]\n",
-      "root:  [3 3] 1 left:  [0 1] right:  [4 6]\n",
-      "root:  [12 13] 1 left:  [10 10] right:  [13 14]\n",
-      "root:  [0 1] 1 left:  None right:  None\n",
-      "root:  [4 6] 1 left:  None right:  None\n",
-      "root:  [10 10] 1 left:  None right:  None\n",
-      "root:  [13 14] 1 left:  None right:  None\n"
+      "root:  [5 5] left:  [3 3] right:  [12 13] axis:  2\n",
+      "root:  [3 3] left:  [0 1] right:  [4 6] axis:  1\n",
+      "root:  [12 13] left:  [10 10] right:  [13 14] axis:  1\n",
+      "root:  [0 1] left:  None right:  None axis:  1\n",
+      "root:  [4 6] left:  None right:  None axis:  1\n",
+      "root:  [10 10] left:  None right:  None axis:  1\n",
+      "root:  [13 14] left:  None right:  None axis:  1\n"
      ]
     }
    ],
@@ -415,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 130,
    "id": "aaf1e5c6",
    "metadata": {},
    "outputs": [
@@ -434,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 131,
    "id": "f6f3a56a",
    "metadata": {},
    "outputs": [
@@ -453,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 132,
    "id": "9fd3ff9e",
    "metadata": {},
    "outputs": [
@@ -473,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 133,
    "id": "a166d51e",
    "metadata": {},
    "outputs": [
@@ -490,6 +461,143 @@
     "#Case: Collinear\n",
     "print(CountQueryPoints(root,[-1,-1],[-1,15]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "fef8f282",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NNKDTree(queryPoint, root, threshold, noOfPoints):\n",
+    "    listOfNeighbors = []\n",
+    "    return NNKDTreeRec(queryPoint, root, threshold, noOfPoints, listOfNeighbors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "a0f53c10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def squareDistance(p1, p2):\n",
+    "    retValue = abs((p1[0] - p2[0]) ^ 2 - (p1[1] - p2[1]) ^ 2)\n",
+    "    print(\"p1: \", p1, \"p2: \", p2, \"print val: \", retValue)\n",
+    "    return retValue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "54c71898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NNKDTreeRec(queryPoint, root, threshold, noOfPoints, listOfNeighbors):\n",
+    "    if not root:\n",
+    "        return listOfNeighbors\n",
+    "    else:\n",
+    "        if squareDistance(root.val, queryPoint) < threshold and len(listOfNeighbors) < noOfPoints:\n",
+    "            listOfNeighbors.append(root.val)\n",
+    "        if root.left == None and root.right == None:\n",
+    "            return listOfNeighbors\n",
+    "        else:\n",
+    "            T1, T2 = None, None\n",
+    "            query = queryPoint[0] if root.axis == 0 else queryPoint[1]\n",
+    "            currRoot = root.val[0] if root.axis == 0 else root.val[1]\n",
+    "                \n",
+    "            if query < root.val[0] if root.axis == 0 else root.val[1]:\n",
+    "                T1 = root.left\n",
+    "                T2 = root.right\n",
+    "            else:\n",
+    "                T1 = root.right\n",
+    "                T2 = root.left\n",
+    "            leftList = NNKDTreeRec(queryPoint, T1, threshold, noOfPoints, listOfNeighbors)\n",
+    "            if len(leftList) < noOfPoints and squareDistance(root.val, queryPoint) < threshold:\n",
+    "                rightList = NNKDTreeRec(queryPoint, root.right, threshold, noOfPoints, listOfNeighbors)\n",
+    "            else:\n",
+    "                rightList = NNKDTreeRec(queryPoint, root.right, threshold, noOfPoints, listOfNeighbors)\n",
+    "    return listOfNeighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "3f97e802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0,  1],\n",
+       "        [ 3,  3],\n",
+       "        [ 4,  6],\n",
+       "        [ 5,  5],\n",
+       "        [10, 10],\n",
+       "        [12, 13],\n",
+       "        [13, 14]]),\n",
+       " array([5, 5]))"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points, root.val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "0a5274bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p1:  [5 5] p2:  [6, 4] print val:  4\n",
+      "p1:  [3 3] p2:  [6, 4] print val:  4\n",
+      "p1:  [0 1] p2:  [6, 4] print val:  3\n",
+      "p1:  [3 3] p2:  [6, 4] print val:  4\n",
+      "p1:  [4 6] p2:  [6, 4] print val:  4\n",
+      "p1:  [5 5] p2:  [6, 4] print val:  4\n",
+      "p1:  [12 13] p2:  [6, 4] print val:  3\n",
+      "p1:  [10 10] p2:  [6, 4] print val:  6\n",
+      "p1:  [12 13] p2:  [6, 4] print val:  3\n",
+      "p1:  [13 14] p2:  [6, 4] print val:  3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([5, 5]),\n",
+       " array([3, 3]),\n",
+       " array([0, 1]),\n",
+       " array([4, 6]),\n",
+       " array([12, 13]),\n",
+       " array([13, 14])]"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NNKDTree([6,4], root, 5, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee61da81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
