Changed package name

--- a/tests/test_kdtree.ipynb
+++ b/tests/test_kdtree.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kd_tree.kdtree import KDTree, Node\n",
+    "from weighted_kdtree import kdtree\n",
     "import unittest\n",
     "import numpy as np"
    ]
@@ -26,68 +26,77 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43350919",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(r\"C:\\Users\\msidda2\\OneDrive - University of Illinois Chicago\\Master's\\sem-4\\Geodata analysis\\kd_tree\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "df44f08c",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TestKDTree(unittest.TestCase):\n",
-    "    def setUp(self):\n",
-    "        self.kdTree = KDTree()\n",
-    "        self.kdTreeRoot = self.kdTree.buildKdTree(np.array([(12,34), (25,36), (9,10)]))\n",
     "    \n",
-    "    # buildKdTree methods\n",
-    "    def test_buildKdTree_without_weights(self):\n",
-    "        self.assertEqual(self.kdTreeRoot.weight, None, \"Weights present\")\n",
+    "    # __init__ method\n",
+    "    def test_init_points_without_weights(self):\n",
+    "        kdtreeRoot = kdtree.KDTree([(12.34, 34.21)])\n",
+    "        self.assertEqual(kdtreeRoot.root.val, (12.34, 34.21), \"Wrong values\")\n",
+    "        self.assertEqual(kdtreeRoot.weights, None, \"Weights present\")\n",
     "    \n",
-    "    def test_buildKdTree_single_point_without_weight(self):\n",
-    "        kdTreeWithoutWts = self.kdTree.buildKdTree(np.array([(12,34)]))\n",
-    "        self.assertTrue((kdTreeWithoutWts.val == (12, 34)).all(), \"Wrong values\")\n",
-    "        \n",
     "    def test_buildKdTree_single_point_with_weight(self):\n",
-    "        kdTreeWithWeights = self.kdTree.buildKdTree(np.array([(12,34)]), [10])\n",
-    "        self.assertTrue((kdTreeWithWeights.val == (12, 34)).all(), \"Wrong values\")\n",
-    "        self.assertEqual(kdTreeWithWeights.weight[\"weight\"], 10)\n",
+    "        kdtreeRoot = kdtree.KDTree([(-12,-34)], [10])\n",
+    "        self.assertEqual(kdtreeRoot.root.val, (-12, -34), \"Wrong values\")\n",
+    "        self.assertEqual(kdtreeRoot.root.weight[\"weight\"], 10)\n",
     "        \n",
     "    def test_buildKdTree_multiple_points_with_weight1(self):\n",
-    "        kdTreeWithWeights = self.kdTree.buildKdTree(np.array([(12,34), (25,36), (9,10), (5, 15), (30, 20), (20, 27)]), [10, 20, 5, 15, 25, 30])\n",
-    "        self.assertTrue((kdTreeWithWeights.val == (20, 27)).all(), \"Wrong values\")\n",
-    "        self.assertEqual(kdTreeWithWeights.weight[\"weight\"], 30, \"Weights incompatible\")\n",
+    "        kdtreeRoot = kdtree.KDTree([(12,34), (25,36), (9,10), (5, 15), (30, 20), (20, 27)], [10, 20, 5, 15, 25, 30])\n",
+    "        self.assertEqual(kdtreeRoot.root.val, (20, 27), \"Wrong values\")\n",
+    "        self.assertEqual(kdtreeRoot.root.weight[\"weight\"], 30, \"Weights incompatible\")\n",
     "        \n",
     "    def test_buildKdTree_multiple_points_with_weight2(self):\n",
-    "        kdTreeWithWeights = self.kdTree.buildKdTree(np.array([(12,34), (25,36), (9,10)]), [10, 20, 30])\n",
-    "        self.assertTrue((kdTreeWithWeights.val == (12, 34)).all(), \"Wrong values\")\n",
-    "        self.assertEqual(kdTreeWithWeights.weight[\"weight\"], 10, \"\")\n",
+    "        kdtreeRoot = kdtree.KDTree([(12,34), (-25,36), (9,-10)], [10, 20, 30])\n",
+    "        self.assertEqual(kdtreeRoot.root.val, (9, -10), \"Wrong values\")\n",
+    "        self.assertEqual(kdtreeRoot.root.weight[\"weight\"], 30, \"\")\n",
     "    \n",
-    "    def test_buildKdTree_multiple_points_with_weight2(self):\n",
-    "        kdTreeWithWeights = self.kdTree.buildKdTree(np.array([(12,34), (25,36)]), [10, 20])\n",
-    "        self.assertTrue((kdTreeWithWeights.val == (25, 36)).all(), \"Wrong values\")\n",
-    "        self.assertEqual(kdTreeWithWeights.weight[\"weight\"], 20, \"\")\n",
+    "    def test_buildKdTree_multiple_points_with_weight(self):\n",
+    "        kdtreeRoot = kdtree.KDTree([(12,34), (25,36)], [10, 20])\n",
+    "        self.assertEqual(kdtreeRoot.root.val, (25,36), \"Wrong values\")\n",
+    "        self.assertEqual(kdtreeRoot.root.weight[\"weight\"], 20, \"\")\n",
     "        \n",
-    "    def test_isLeaf(self):\n",
-    "        res = self.kdTree.isLeaf(self.kdTreeRoot.left)\n",
-    "        self.assertEqual(res, True, \"Incorrect value\")\n",
+    "    def test_buildKdTree_single_point_with_weight(self):\n",
+    "        kdtreeRoot = kdtree.KDTree([(-12,-34)], [10])\n",
+    "        self.assertEqual(kdtreeRoot.root.val, (-12, -34), \"Wrong values\")\n",
+    "        self.assertEqual(kdtreeRoot.root.weight[\"weight\"], 10)\n",
     "    \n",
-    "    def test_buildKdTree_with_incompatible_weights(self):\n",
-    "        kdTreeWithWeights = self.kdTree.buildKdTree(np.array([(12,34), (25,36), (9,10)]), [10, 20])\n",
-    "        self.assertEqual(kdTreeWithWeights, None, \"Weights incompatible\")\n",
+    "    def test_buildKdTree_with_incompatible_weights1(self):\n",
+    "        self.assertRaises(ValueError, kdtree.KDTree, ([(12,34), (25,36), (9,10)], [10, 20]))\n",
     "        \n",
-    "    "
+    "    def test_buildKdTree_with_incompatible_weights2(self):\n",
+    "        self.assertRaises(ValueError, kdtree.KDTree, ([(12,34), (25,36), (9,10,12)]))\n",
+    "        \n",
+    "    # Testing preorder traversal\n",
+    "    def test_preorderTraversal1(self):\n",
+    "        preorderTraversal = kdtree.KDTree.preorderTraversal(kdtree.KDTree([(12,34), (25,36), (9,10), (5, 15), (30, 20), (20, 27)]).root);\n",
+    "        self.assertEqual(preorderTraversal, [[(9, 10)], [(12, 34)], [(5, 15)], [(30, 20)], [(25, 36)], [(20, 27)]], \"Order is incorrect\")\n",
+    "    \n",
+    "     # Testing preorder traversal\n",
+    "    def test_preorderTraversal2(self):\n",
+    "        preorderTraversal = kdtree.KDTree.preorderTraversal(kdtree.KDTree([(12,34), (25,36), (9,10)], [10, 20, 30]).root);\n",
+    "        self.assertEqual(preorderTraversal[1], [(25, 36)] , \"Order is incorrect\")\n",
+    "        \n",
+    "     # Testing preorder traversal\n",
+    "    def test_dfs(self):\n",
+    "        dfs = kdtree.KDTree.dfs(kdtree.KDTree([(12,34), (25,36), (9,10), (5, 15), (30, 20), (20, 27)]).root)\n",
+    "        self.assertEqual(len(dfs['[(20, 27), 0, 6, None, None, None]']), 2, \"Root node doesn't have two children\")\n",
+    "        \n",
+    "    # NN\n",
+    "    def test_nnKdTree1(self):\n",
+    "        root = kdtree.KDTree([(12,34), (25,36), (9,10), (5, 15), (30, 20), (20, 27)]).root\n",
+    "        self.assertEqual(len(kdtree.KDTree.nnKDTree((8,6), root, 10, 1)), 1)\n",
+    "        \n",
+    "    def test_nnKdTree2(self):\n",
+    "        root = kdtree.KDTree([(12,34), (25,36), (9,10), (5, 15), (30, 20), (20, 27)]).root\n",
+    "        self.assertEqual(len(kdtree.KDTree.nnKDTree((8,6), root, 10, 2)), 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d33bd0a8",
    "metadata": {},
    "outputs": [
@@ -95,30 +104,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "test_buildKdTree_multiple_points_with_weight (__main__.TestKDTree) ... ok\n",
       "test_buildKdTree_multiple_points_with_weight1 (__main__.TestKDTree) ... ok\n",
       "test_buildKdTree_multiple_points_with_weight2 (__main__.TestKDTree) ... ok\n",
       "test_buildKdTree_single_point_with_weight (__main__.TestKDTree) ... ok\n",
-      "test_buildKdTree_single_point_without_weight (__main__.TestKDTree) ... ok\n",
-      "test_buildKdTree_with_incompatible_weights (__main__.TestKDTree) ... ok\n",
-      "test_buildKdTree_without_weights (__main__.TestKDTree) ... ok\n",
-      "test_isLeaf (__main__.TestKDTree) ... "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Incompatible len of points and weights\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
+      "test_buildKdTree_with_incompatible_weights1 (__main__.TestKDTree) ... ok\n",
+      "test_buildKdTree_with_incompatible_weights2 (__main__.TestKDTree) ... ok\n",
+      "test_dfs (__main__.TestKDTree) ... ok\n",
+      "test_init_points_without_weights (__main__.TestKDTree) ... ok\n",
+      "test_nnKdTree1 (__main__.TestKDTree) ... ok\n",
+      "test_nnKdTree2 (__main__.TestKDTree) ... ok\n",
+      "test_preorderTraversal1 (__main__.TestKDTree) ... ok\n",
+      "test_preorderTraversal2 (__main__.TestKDTree) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 7 tests in 0.013s\n",
+      "Ran 12 tests in 0.027s\n",
       "\n",
       "OK\n"
      ]
@@ -126,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x1716f6dc370>"
+       "<unittest.main.TestProgram at 0x20d7b9ce3a0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,14 +137,6 @@
    "source": [
     "unittest.main(argv=[''], verbosity=2, exit=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "990349af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
