--- a/notebooks/monisha_testing.ipynb
+++ b/notebooks/monisha_testing.ipynb
@@ -121,25 +121,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "994f87c2",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "neighborsList:  [(-14.142135623730951, (12, 34)), (-7.0710678118654755, (5, 15)), (-12.206555615733702, (20, 27))]\n",
+      "neighborsList:  [(-14.142135623730951, (12, 34)), (-10.04987562112089, (9, 10)), (-12.206555615733702, (20, 27)), (-7.0710678118654755, (5, 15))]\n",
+      "neighborsList:  [(-20.0, (30, 20)), (-14.142135623730951, (12, 34)), (-12.206555615733702, (20, 27)), (-7.0710678118654755, (5, 15)), (-10.04987562112089, (9, 10))]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[(10.04987562112089, (9, 10)),\n",
-       " (12.206555615733702, (20, 27)),\n",
-       " (14.142135623730951, (12, 34))]"
+       "[(30, 20), (12, 34), (20, 27), (5, 15), (9, 10)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kdtree.KDTree.nnKDTree((10, 20), kd_tree.root, 15, 3)"
+    "kdtree.KDTree.nnKDTree((10, 20), kd_tree.root, 20, 7)"
    ]
   },
   {
