--- a/tests/test_kdtree.ipynb
+++ b/tests/test_kdtree.ipynb
@@ -115,10 +115,29 @@
       "test_nnKdTree1 (__main__.TestKDTree) ... ok\n",
       "test_nnKdTree2 (__main__.TestKDTree) ... ok\n",
       "test_preorderTraversal1 (__main__.TestKDTree) ... ok\n",
-      "test_preorderTraversal2 (__main__.TestKDTree) ... ok\n",
+      "test_preorderTraversal2 (__main__.TestKDTree) ... "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before push pop:  [(-9.486832980505138, (5, 15))]\n",
+      "After push pop:  [(-4.123105625617661, (9, 10))]\n",
+      "neighborsList:  [(-4.123105625617661, (9, 10))]\n",
+      "neighborsList:  [(-4.123105625617661, (9, 10))]\n",
+      "neighborsList:  [(-9.486832980505138, (5, 15)), (-4.123105625617661, (9, 10))]\n",
+      "neighborsList:  [(-9.486832980505138, (5, 15)), (-4.123105625617661, (9, 10))]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 12 tests in 0.027s\n",
+      "Ran 12 tests in 0.018s\n",
       "\n",
       "OK\n"
      ]
@@ -126,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x20d7b9ce3a0>"
+       "<unittest.main.TestProgram at 0x22ffe21e190>"
       ]
      },
      "execution_count": 3,
@@ -137,6 +156,14 @@
    "source": [
     "unittest.main(argv=[''], verbosity=2, exit=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3622e2b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
